First controller and Razor pages tests

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>developer (C#,python,java e C++) @ViewData["developer"]</p>
+ 
+<address>
+    <strong>More information: </strong> <a href="https://github.com/LeandroLara89">Github.com</a
+</address>
