Deleting department view and controller

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -7,5 +7,5 @@
 <p>developer (C#,python,java e C++) @ViewData["developer"]</p>
  
 <address>
-    <strong>More information: </strong> <a href="https://github.com/LeandroLara89">Github.com</a
+    <strong>More information: </strong> <a href="https://github.com/LeandroLara89">Github.com</a>
 </address>
